# grab-IA

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.txt  CLEANER.md  CLI-QUICKREF.md  DOCKER.md  Dockerfile  LICENSE  README.md  SETUP.md  example_ids.txt  grab-ia.bat  grab-ia.sh  grabIA.py  grabia_cleaner.py  grabia_cli.py  grabia_core.py  grabia_gui.py  launch.py  launcher.pyw  pyproject.toml  readme.md  requirements.txt
deploy/: grabIA.py  requirements.txt
