[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grab-ia"
version = "1.0.0"
description = "A high-performance, multi-threaded Internet Archive mass downloader"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "internetarchive",
    "rich",
    "requests",
    "python-dotenv"
]

[project.scripts]
grabia = "grabIA:main"

[tool.setuptools]
py-modules = ["grabIA", "grabia_core"]
